# money_minder_chatbot

./: .env  .gitignore  CRITICAL_FIX.md  IMPLEMENTATION_SUMMARY.md  KNOWN_LIMITATIONS.md  OPTION1_SUCCESS.md  README.md  TESTING.md  agent.py  app.py  langchain_tools.py  logger.py  pyproject.toml  response_processor.py  test_response_quality.py  tool_handlers.py  vector_store.py
.cursor/commands/: git_push.md
.cursor/plans/: fix_react_agent_-_plan_a_dbd9c09d.plan.md  fix_react_agent_architecture_f4c20bdc.plan.md  reAct_architecture_plan_review.md
.cursor/rules/: activatevenv.mdc
.specstory/: .project.json
.specstory/history/: 2025-12-08_14-39Z-unable-to-connect-notebook-kernel.md  2025-12-08_15-17Z-configure-autoformatter-using-uv.md  (+22 more)
artifacts/: Langchain_Plan.md
notebooks/: analysis.ipynb
scripts/: generate_sample.py
test_results/: Complex_Quality_Testing.md  Complex_Scenarios_summary_rationale.md  More_Complex_Scenarios.md  Quality_Testing.md  README.md  comparison_report_V2.md  comparison_report_V3.md  comparison_report_V4.md  comparison_report_V5.md  comparison_v1.md  complex_quality_report_20251210_074806.md  complex_quality_report_20251210_084724.md  quality_report_20251209_103903.md  quality_report_20251209_104555.md  quality_report_20251209_104644.md  quality_report_20251209_112700.md  quality_report_20251209_172526.md  quality_report_20251209_174019.md  quality_report_20251209_175701.md  quality_report_20251209_180920.md  test_complex_scenarios.py  test_complex_scenarios_runner.py  test_date_extraction.py  test_response_quality.py
(+21 files in other folders)
